[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_render = "0.12.0"