[workspace]
resolver = "2" # Important! wgpu/Bevy needs this
members = [
    "camera_control",
    "common",
    "game",
    "world",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_render = "0.12.0"
camera_control = { path = "camera_control" }
common = { path = "common" }
world = { path = "world" }